# FileLoader

./: CMakeLists.txt  FileLoader.cpp  FileLoader.h  GUI.cpp  GUI.h  Observer.h  README.md  ResourceFile.cpp  ResourceFile.h  Subject.h  main.cpp
test/: CMakeLists.txt  FileLoaderTest.cpp  GUITest.cpp
